# python-boilerplate

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  pytest.ini
scripts/: cleanup_example.py
src/boilerplate/: __init__.py  config.py  main.py
src/boilerplate/api/: __init__.py
src/boilerplate/api/v1/: __init__.py  api.py
src/boilerplate/api/v1/endpoints/: __init__.py  todos.py
src/boilerplate/core/: __init__.py
src/boilerplate/models/: __init__.py  todo.py
src/boilerplate/services/: __init__.py  todo.py
src/boilerplate/static/css/: styles.css
src/boilerplate/static/js/: main.js  todos.js
src/boilerplate/templates/: base.html  todos.html
src/boilerplate/utils/: __init__.py
tests/: conftest.py
tests/integration/: test_todo_api.py
tests/unit/: test_todo_service.py
