[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "python-boilerplate"
version = "0.1.0"
description = "Um boilerplate Python moderno seguindo as melhores práticas"
readme = "README.md"
authors = [
    {name = "Seu Nome", email = "seu.email@exemplo.com"}
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.11",
]
requires-python = ">=3.11,<3.12"
dependencies = [
    # Framework principal
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    
    # Processamento de templates
    "jinja2>=3.1.3",
    
    # Validação de dados
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    
    # Gerenciamento de ambiente
    "python-dotenv>=1.0.1",
    
    # Processamento de formulários
    "python-multipart>=0.0.9",
    
    # Timezone
    "pytz>=2023.3",
]

[project.optional-dependencies]
dev = [
    # Testes
    "pytest>=8.1.1",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.23.3",
    "pytest-xdist>=3.5.0",
    
    # Cliente HTTP para testes
    "httpx>=0.27.0",
    
    # Formatação de código
    "black>=24.3.0",
    "isort>=5.13.2",
    
    # Verificação de tipos
    "mypy>=1.8.0",
    "types-python-jose>=3.3.0",
    "types-python-dateutil>=2.9.0.20240316",
    
    # Linting
    "flake8>=7.0.0",
    "flake8-bugbear>=24.2.6",
    "flake8-comprehensions>=3.14.0",
    
    # Documentação
    "mkdocs>=1.5.3",
    "mkdocs-material>=9.5.3",
    "mkdocstrings[python]>=0.24.0",
]

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true

[project.scripts]
boilerplate = "boilerplate.cli:main"
